Experimentation/JorgeVsg/signal_hound_sdk/device_apis/sp_series/include/sp_api.h


        typedef unsigned int       uint32_t;
#define SP_TRUE (1)
#define SP_FALSE (0)
#define SP_MAX_DEVICES (9)
#define SP_MAX_REF_LEVEL (20.0)
#define SP_AUTO_ATTEN (-1)
#define SP_MAX_ATTEN (6)
#define SP_MIN_FREQ (9.0e3)
#define SP_MAX_FREQ (15.0e9)
#define SP_MIN_SWEEP_TIME (1.0e-6)
#define SP_MAX_SWEEP_TIME (100.0)
#define SP_REAL_TIME_MIN_SPAN (200.0e3)
#define SP_REAL_TIME_MAX_SPAN (40.0e6)
#define SP_REAL_TIME_MIN_RBW (2.0e3)
#define SP_REAL_TIME_MAX_RBW (1.0e6)
#define SP_MAX_IQ_DECIMATION (8192)
#define SP_MAX_IQ_SWEEP_STEPS (1000)
#define SP_MIN_FAN_SET_POINT (0.0)
#define SP_MAX_FAN_SET_POINT (60.0)
#define SP_MAX_SWEEP_QUEUE_SZ (16)
typedef enum SpStatus {
    spInternalFlashErr = -101,
    spInternalFileIOErr = -100,
    spGPSErr = -12,
    spAllocationErr = -11,
    spMaxDevicesConnectedErr = -10,
    spInvalidConfigurationErr = -9,
    spSweepAlreadyActiveErr = -8,
    spBootErr = -7,
    spFramingErr = -6,
    spConnectionLostErr = -5,
    spInvalidDeviceErr = -4,
    spNullPtrErr = -3,
    spInvalidParameterErr = -2,
    spDeviceNotFoundErr = -1,
    spNoError = 0,
    spSettingClamped = 1,
    spTempDrift = 2,
    spADCOverflow = 3,
    spUncalData = 4,
    spCPULimited = 5,
    spInvalidCalData = 6
} SpStatus;
typedef enum SpBool {
    spFalse = 0,
    spTrue = 1
} SpBool;
typedef enum SpPowerState {
    spPowerStateOn = 0,
    spPowerStateStandby = 1
} SpPowerState;
typedef enum SpMode {
    spModeIdle = 0,
    spModeSweeping = 1,
    spModeRealTime = 2,
    spModeIQStreaming = 3,
    spModeIQSweepList = 4,
    spModeAudio = 5,
} SpMode;
typedef enum SpDetector {
    spDetectorAverage = 0,
    spDetectorMinMax = 1
} SpDetector;
typedef enum SpScale {
    spScaleLog = 0,
    spScaleLin = 1,
    spScaleFullScale = 2
} SpScale;
typedef enum SpVideoUnits {
    spVideoLog = 0,
    spVideoVoltage = 1,
    spVideoPower = 2,
    spVideoSample = 3
} SpVideoUnits;
typedef enum SpWindowType {
    spWindowFlatTop = 0,
    spWindowNutall = 1,
    spWindowBlackman = 2,
    spWindowHamming = 3,
    spWindowGaussian6dB = 4,
    spWindowRect = 5
} SpWindowType;
typedef enum SpDataType {
    spDataType32fc = 0,
    spDataType16sc = 1
} SpDataType;
typedef enum SpTriggerEdge {
    spTriggerEdgeRising = 0,
    spTriggerEdgeFalling = 1
} SpTriggerEdge;
typedef enum SpGPSState {
    spGPSStateNotPresent = 0,
    spGPSStateLocked = 1,
    spGPSStateDisciplined = 2
} SpGPSState;
typedef enum SpReference {
    spReferenceUseInternal = 0,
    spReferenceUseExternal = 1
} SpReference;
typedef enum SpGPIOFunction {
    SpGPIOFunctionTrigIn = 0,
    SpGPIOFunctionPPSOut = 1,
    SpGPIOFunctionLogicOutLow = 2,
    SpGPIOFunctionLogicOutHigh = 3,
    SpGPIOFunctionUARTDirect = 4,
    SpGPIOFunctionUARTSweep = 5,
    SpGPIOFunctionUARTDoppler = 6
} SpGPIOFunction;
typedef enum SpAudioType {
    spAudioTypeAM = 0,
    spAudioTypeFM = 1,
    spAudioTypeUSB = 2,
    spAudioTypeLSB = 3,
    spAudioTypeCW = 4
} SpAudioType;
SP_API SpStatus spGetDeviceList(int *serials, int *deviceCount);
SP_API SpStatus spOpenDevice(int *device);
SP_API SpStatus spOpenDeviceBySerial(int *device, int serialNumber);
SP_API SpStatus spCloseDevice(int device);
SP_API SpStatus spPresetDevice(int device);
SP_API SpStatus spSetPowerState(int device, SpPowerState powerState);
SP_API SpStatus spGetPowerState(int device, SpPowerState *powerState);
SP_API SpStatus spGetSerialNumber(int device, int *serialNumber);
SP_API SpStatus spGetFirmwareVersion(int device, int *major, int *minor, int *revision);
SP_API SpStatus spGetDeviceDiagnostics(int device, float *voltage, float *current, float *temperature);
SP_API SpStatus spGetCalDate(int device, uint32_t *lastCalDate);
SP_API SpStatus spSetGPIOPort(int device, SpGPIOFunction func);
SP_API SpStatus spSetSweepCoupling(int device, double rbw, double vbw, double sweepTime);